# aicode

./: .gitignore  README.md  analysis_report.md  chapter4.md  ecommerce_attributes.json  ecommerce_attributes_expanded.json  ecommerce_attributes_v2.json  eval-kg-analysis-report.md  expand_attributes.py  expand_attributes_v2.py  expand_attributes_v3.py  file_0---7ee83e88-7223-4d7c-ae0b-4e9ae7a1c8a1.txt  improve_citations.py  iteration_log.md  mobilitybench_analysis.md  paper_analysis_report.md  pyproject.toml
.openclaw/: workspace-state.json
analysis/: analysis_report.md
book_figures/: README.md
data/: feature_store_after_feedback.json  feature_store_snapshot.json  papers.json  papers_product_matching_README.md  synthetic_events.json  synthetic_supply.json  synthetic_users.json
docs/: ENTERPRISE_AGENT_ARCHITECTURE.md  MULTI_AGENT_ARCHITECTURE.md  PROJECT_OVERVIEW.md  auto_scheduler.md
goldset_v0_1/: README.md  challenge_adversarial.jsonl  challenge_confusion.jsonl  challenge_long_tail.jsonl  challenge_robustness.jsonl  error_taxonomy.md  generator.py  gold_ecom.jsonl  gold_miniapp.jsonl  label_guideline.md  quality_report.md  schema.json  validator.py
knowledge_base/: ANALYSIS_REPORT.md  analyze_batch.py  improve_metadata.py  kb_analyzer.py  kb_citation.py  kb_classifier.py  kb_importer.py  kb_schema.py  paper_relationship_analysis.md  process_papers.py
memory/: 2026-02-25.md  2026-02-26-request-timed-out-before-a-res.md  2026-02-26.md  2026-02-28.md  2026-03-01.md  2026-03-02.md
monitoring/: minimax_monitor.py  minimax_monitor.sh  model_routing_policy.md
(+1410 files in other folders)
