[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "multi-agent-arxiv"
version = "0.1.0"
description = "Multi-agent system with knowledge graph for e-commerce matching"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "loguru>=0.7.0",
    "typing-extensions>=4.5",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
]
